fix(skinning): 🐛 incorrect text alignement for mw-halign-center

--- a/resources/skins.citizen.styles/skinning/content.media-common.less
+++ b/resources/skins.citizen.styles/skinning/content.media-common.less
@@ -22,6 +22,7 @@ figure[ typeof~='mw:File/Frame' ] {
 	&.mw-halign-center {
 		margin-right: auto;
 		margin-left: auto;
+		text-align: center;
 	}
 }
 
